# my-100-exercises-to-learn-rust

exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/06_ownership/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/06_str_slice/: Cargo.toml
exercises/04_traits/06_str_slice/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs
exercises/05_ticket_v2/15_outro/src/: description.rs  status.rs  title.rs
exercises/06_ticket_management/01_arrays/src/: lib.rs
exercises/06_ticket_management/02_vec/src/: lib.rs
exercises/06_ticket_management/04_iterators/src/: lib.rs
exercises/06_ticket_management/05_iter/src/: lib.rs
exercises/07_threads/01_threads/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml  curl-tests.sh
exercises/08_futures/08_outro/src/: data.rs  description.rs  lib.rs  main.rs  store.rs  title.rs
(+23 files in other folders)
